# picomax

./: .gitignore  CMakeLists.txt  GUIDE.md  LICENSE  README.md  data.csv  make_rrd.sh  max6675.c  max6675.h  office.rrd  picotemp.c  reader.c  show-12h.sh  show-1h.sh  show-24h.sh
